Code clean-up, keep only file and redis data sources