@@ -2,75 +2,78 @@ package com.infernalsuite.aswm.loaders.file;
 
 import com.infernalsuite.aswm.api.exceptions.UnknownWorldException;
 import com.infernalsuite.aswm.api.loaders.SlimeLoader;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 
-import java.io.*;
+import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.NotDirectoryException;
-import java.util.Arrays;
+import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+@Slf4j
 public class FileLoader implements SlimeLoader {
 
-    private static final FilenameFilter WORLD_FILE_FILTER = (dir, name) -> name.endsWith(".slime");
-    private static final Logger LOGGER = LoggerFactory.getLogger(FileLoader.class);
+    private final Path worldDir;
 
-    private final File worldDir;
-
-    public FileLoader(File worldDir) throws IllegalStateException {
+    public FileLoader(Path worldDir) throws IllegalStateException, IOException {
         this.worldDir = worldDir;
 
-        if (worldDir.exists() && !worldDir.isDirectory()) {
-            LOGGER.warn("A file named '{}' has been deleted, as this is the name used for the worlds directory.", worldDir.getName());
-            if (!worldDir.delete()) throw new IllegalStateException("Failed to delete the file named '" + worldDir.getName() + "'.");
+        if (Files.exists(worldDir) && !Files.isDirectory(worldDir)) {
+            log.warn("A file named '{}' has been deleted, as this is the name used for the worlds directory.", worldDir.getFileName());
+            Files.delete(worldDir);
         }
 
-        if (!worldDir.exists() && !worldDir.mkdirs()) throw new IllegalStateException("Failed to create the worlds directory.");
+        if (!Files.isDirectory(worldDir)) {
+            Files.createDirectories(worldDir);
+        }
     }
 
     @Override
     public byte[] readWorld(String worldName) throws UnknownWorldException, IOException {
-        if (!worldExists(worldName)) {
+        if (!worldExists(worldName))
             throw new UnknownWorldException(worldName);
-        }
 
-        try (FileInputStream fis = new FileInputStream(new File(worldDir, worldName + ".slime"))){
-            return fis.readAllBytes();
-        }
+        return Files.readAllBytes(worldDir.resolve(worldName + ".slime"));
     }
 
     @Override
     public boolean worldExists(String worldName) {
-        return new File(worldDir, worldName + ".slime").exists();
+        return Files.isRegularFile(worldDir.resolve(worldName + ".slime"));
     }
 
     @Override
     public List<String> listWorlds() throws NotDirectoryException {
-        String[] worlds = worldDir.list(WORLD_FILE_FILTER);
-
-        if (worlds == null) {
-            throw new NotDirectoryException(worldDir.getPath());
+        try (Stream<Path> paths = Files.list(worldDir)) {
+            return paths.filter(Files::isRegularFile)
+                    .filter(path -> path.endsWith(".slime"))
+                    .map(path -> path.getFileName().toString())
+                    .map(name -> name.substring(0, name.length() - 6))
+                    .toList();
+        } catch (IOException ignored) {
+            throw new NotDirectoryException(worldDir.toString());
         }
-
-        return Arrays.stream(worlds).map((c) -> c.substring(0, c.length() - 6)).collect(Collectors.toList());
     }
 
     @Override
     public void saveWorld(String worldName, byte[] serializedWorld) throws IOException {
-        try (FileOutputStream fos = new FileOutputStream(new File(worldDir, worldName + ".slime"))) {
-            fos.write(serializedWorld);
-        }
+        if (!Files.isDirectory(worldDir))
+            Files.createDirectories(worldDir);
+
+        Files.write(
+                worldDir.resolve(worldName + ".slime"),
+                serializedWorld,
+                StandardOpenOption.CREATE,
+                StandardOpenOption.TRUNCATE_EXISTING
+        );
     }
 
     @Override
     public void deleteWorld(String worldName) throws UnknownWorldException, IOException {
-        if (!worldExists(worldName)) {
+        if (!Files.deleteIfExists(worldDir.resolve(worldName + ".slime"))) {
             throw new UnknownWorldException(worldName);
-        } else {
-            if (!new File(worldDir, worldName + ".slime").delete()) {
-                throw new IOException("Failed to delete the world file. File#delete() returned false.");
-            }
         }
     }
+
 }
