@@ -19,13 +19,13 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.concurrent.CompletableFuture;
 
-public class UnloadWorldCmd extends SlimeCommand {
+public final class UnloadWorldCmd extends SlimeCommand {
 
     public UnloadWorldCmd(CommandManager commandManager) {
         super(commandManager);
     }
 
-    @Command("swp|aswm|swm unload <world>")
+    @Command("swm|aswm|swp unload <world>")
     @CommandDescription("Unload a world.")
     @Permission("swm.unloadworld")
     public void unloadWorld(CommandSender sender, @Argument(value = "world") SlimeWorld slimeWorld) {
@@ -33,29 +33,28 @@ public class UnloadWorldCmd extends SlimeCommand {
 
         // Teleport all players outside the world before unloading it
         var players = bukkitWorld.getPlayers();
-
         if (!players.isEmpty()) {
             Location spawnLocation = findValidDefaultSpawn();
-            CompletableFuture<Void> cf = CompletableFuture.allOf(players.stream().map(player -> player.teleportAsync(spawnLocation)).toList().toArray(CompletableFuture[]::new));
-            cf.thenRun(() -> {
-                Bukkit.getScheduler().runTask(SWPlugin.getInstance(), () -> {
-                    boolean success = Bukkit.unloadWorld(bukkitWorld, true);
+            CompletableFuture<?>[] futures = players.stream()
+                    .map(player -> player.teleportAsync(spawnLocation))
+                    .toArray(CompletableFuture[]::new);
 
-                    if (!success) {
-                        sender.sendMessage(COMMAND_PREFIX.append(
-                                Component.text("Failed to unload world " + slimeWorld.getName() + ".").color(NamedTextColor.RED)
-                        ));
-                    } else {
-                        sender.sendMessage(COMMAND_PREFIX.append(
-                                Component.text("World ").color(NamedTextColor.GREEN)
-                                        .append(Component.text(slimeWorld.getName()).color(NamedTextColor.YELLOW))
-                                        .append(Component.text(" unloaded correctly.")).color(NamedTextColor.GREEN)
-                        ));
-                    }
-                });
-            });
+            CompletableFuture.allOf(futures).thenRun(() -> Bukkit.getScheduler().runTask(SWPlugin.getInstance(), () -> {
+                if (!Bukkit.unloadWorld(bukkitWorld, true)) {
+                    sender.sendMessage(COMMAND_PREFIX.append(
+                            Component.text("Failed to unload world '%s'.".formatted(slimeWorld.getName())).color(NamedTextColor.RED)
+                    ));
+                } else {
+                    sender.sendMessage(COMMAND_PREFIX.append(
+                            Component.text("World ").color(NamedTextColor.GREEN)
+                                    .append(Component.text(slimeWorld.getName()).color(NamedTextColor.YELLOW))
+                                    .append(Component.text(" unloaded correctly.")).color(NamedTextColor.GREEN)
+                    ));
+                }
+            }));
         } else {
             Bukkit.unloadWorld(bukkitWorld, true);
+
             sender.sendMessage(COMMAND_PREFIX.append(
                     Component.text("World ").color(NamedTextColor.GREEN)
                             .append(Component.text(slimeWorld.getName()).color(NamedTextColor.YELLOW))
@@ -66,10 +65,10 @@ public class UnloadWorldCmd extends SlimeCommand {
 
     @NotNull
     private Location findValidDefaultSpawn() {
-        var defaultWorld = Bukkit.getWorlds().getFirst();
+        var defaultWorld = Bukkit.getWorlds().get(0);
         var spawnLocation = defaultWorld.getSpawnLocation();
-
         spawnLocation.setY(64);
+
         while (spawnLocation.getBlock().getType() != Material.AIR || spawnLocation.getBlock().getRelative(BlockFace.UP).getType() != Material.AIR) {
             if (spawnLocation.getY() >= 320) {
                 spawnLocation.add(0, 1, 0);
@@ -78,7 +77,8 @@ public class UnloadWorldCmd extends SlimeCommand {
 
             spawnLocation.add(0, 1, 0);
         }
+
         return spawnLocation;
     }
-}
 
+}
